import ClasesPadre.Curso;

public class CursoRegular extends Curso {
    public CursoRegular(String nombre) {
        super(nombre);
    }

}
