@startuml
'https://plantuml.com/class-diagram

 class Curso{
-Materia: String
-Docente: String
+mostrarResumen()
+asignarDocente(String docente)
}
class CursoRegular{
+nota:String
}
class CursoCertificado{
-precioBase: double
+certificar():void
+calcularPrecioFinal()
+mostrarResumen()
}
class Estudiante{
-Nombre: String
-Edad: String
+mostrarDatos()
+validarEdad()
}
class Docente{
-Nombre: String
-Asignatura: String
+calificar(): void
+mostrarPerfil()
}
class Matricula{
+registrar():void
+registrarEvaluacion()
+mostrarDetalle()
}

class Evaluacion{
-nota: int
+getResultado()
+certificar()
}
class Main{
+ main(String[]) : void
}

Curso <|-- CursoRegular
CursoRegular <|-- CursoCertificado

Estudiante --> Curso
Docente --> Curso


Matricula <|- Main

Matricula --> Estudiante


Estudiante --> Evaluacion


@enduml